<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/title_remove_dialog"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/title_dialog_remove" />

    <TextView
        android:id="@+id/txt_remove_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/txt_dialog_remove_location" />

    <TextView
        android:id="@+id/txt_remove_last_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/txt_dialog_remove_last_openned" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_remove_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_margin="8dp"
        android:text="@string/switch_dialog_remove_file"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_remove_validate"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/colorDanger"
            android:text="@string/btn_dialog_remove_validate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_remove_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/btn_dialog_remove_cancel" />

    </LinearLayout>
</LinearLayout>